--- a/Project Marsara/Project Marsara/Base.lproj/Main.storyboard
+++ b/Project Marsara/Project Marsara/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="9kl-Ze-UMf">
-                                <rect key="frame" x="-260" y="234" width="841" height="405"/>
+                                <rect key="frame" x="-260" y="401" width="841" height="238"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Button">
@@ -278,6 +278,7 @@
                     <connections>
                         <outlet property="colorResult" destination="aFs-q9-vWq" id="8KR-8G-GAm"/>
                         <outlet property="recommendOutput" destination="eTC-rQ-ajo" id="0jD-EL-ld7"/>
+                        <outlet property="saveButton" destination="6J4-ky-Ohc" id="faz-Gt-P6l"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Obz-95-ywq" userLabel="First Responder" sceneMemberID="firstResponder"/>
